2018 Oct 02 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.3.1
* Bug fix: crash when a try else block is in an if branch and a mouse hovers it
* Downgrading pyflakes requirement to 1.6.0 due to an implicit dependency via
  radon->flake8_polyfill->flake8->pyflakes

2018 Sep 26 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.3.0
* Bump jedi version to 0.12.1
* Buffer cyclomatic complexity on-the-fly: status bar menu and margin marks
* Better analysis margin pixmap scaling
* Print button for the text editor toolbar added
* Integrate vulture to find dead code
* Remove obsolete unreliable unused functions/classes/global variable
  search implementation based on jedi
* Bug fix: crash on debug dump settings from the main menu
* New dependencies (radon - complexity, vulture - dead code analysis)
* Minor improvements

2018 Aug 13 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.4
* Fix: default application CSS adjustments
* Rubber band selection on the graphics pane

2018 May 25 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.3
* Bug fix: IDE does not start after installation (second try)

2018 May 17 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.2
* Bug fix: IDE does not start after installation
* Preliminary rubber band UI on the graphics pane

2018 May 11 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.1
* Bug fix: incorrect recent files loading (regression)
* New feature: grouping items on the graphics pane

2018 Apr 29 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.2.0
* Text-to-graphics group support: empty/collapsed/expanded groups.
* Bug fix: cloning of a tab content
* Bug fix: incorrect saving encoding when a new file overwrites an existing one
* Bug fix: incorrect item width on smart zoom 1 when scale is changed
* Recent files list is populated when there is no project
* Minor improvements

2018 Jan 11 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.1.0