@@ -4,9 +4,11 @@ cdmgcplugin
 pyflakes==1.6.0
 radon==2.2.0
 PyQt5~=5.7
-python-magic==0.4.13
+python-magic==0.4.15
 qutepart
 yapsy==1.11.223
 jedi>=0.12.1
 vulture==0.29
 gprof2dot
+mistune
+pygments
