@@ -1,3 +1,9 @@
+2018 xxx xx Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version x.x.x
+* Bumping up the magic library version to 0.4.15
+* Introducing basic markdown rendering support
+
 2018 Oct 02 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.3.1
